# langport

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: dev.yml  release.yml
benchmark/: batching_test.ipynb  bench_chat.py  bench_completions.py  bench_embed.py  bench_mteb.py
docs/: README.md  fauxpilot_api.md  langport_arch.md  openai_api.md  openai_server.md  tabby_api.md
langport/: __init__.py  constants.py  version.py
langport/core/: base_node.py  base_worker.py  cluster_node.py  cluster_worker.py  controller.py  dispatch.py  embedding_worker.py  generation_worker.py  inference.py  model_worker.py  node.py  worker.py  worker_node.py
langport/core/workers/: controller.py  embedding_worker.py  generation_worker.py
langport/data/: conversation.py  conversation_templates.py
langport/data/conversation/: __init__.py  conversation_settings.py  conversation_templates.py
langport/data/conversation/settings/: baichuan.py  baichuan2.py  baize.py  bard.py  billa.py  chatglm.py  chatgpt.py  claude.py  dolly.py  falcon.py  firefly.py  h2ogpt.py  internlm.py  koala.py  llama.py  llama_cpp.py  mistral.py  mpt.py  ningyu.py  oasst_pythia.py  one_shot.py  openbuddy.py  phoenix.py  qwen.py  redpajama.py  rwkv.py  stablelm.py  starchat.py  vicuna.py  wizardlm.py  zero_shot.py
langport/data/conversation/templates/: baize.py  bard.py  billa.py  chatgpt.py  claude.py  dolly.py  h2ogpt.py  koala.py  oasst_pythia.py  one_shot.py  openbuddy.py  phoenix.py  redpajama.py  rwkv.py  stablelm.py  vicuna.py  zero_shot.py
langport/data/prompts/: base.py
langport/data/schema/: base.py
langport/model/: compression.py  model_adapter.py  model_args.py  model_holder.py  svd.py
langport/model/adapters/: baichuan.py  baichuan2.py  baize.py  bard.py  billa.py  changgpt.py  chatglm.py  chatglm2.py  chatgpt.py  claude.py  codegen.py  codellama.py  dolly_v2.py  falcon.py  firefly.py  internlm.py  koala.py  llama.py  llama_cpp.py  longchat.py  mistral.py  ningyu.py  oasst_pythia.py  openbuddy.py  phoenix.py  qwen.py  robin.py  rwkv.py  snoozy.py  stable_lm.py  starcoder.py  t5.py  text2vec.py  tigerbot.py  vicuna.py  wizardlm.py
langport/model/executor/: base.py  ggml.py  huggingface.py  huggingface_utils.py  llamacpp.py  optimum.py
langport/model/executor/embedding/: __init__.py  huggingface.py
langport/model/executor/generation/: __init__.py  chatgpt.py  ggml.py  huggingface.py  (+2 more)
langport/protocol/: huggingface_api_protocol.py  openai_api_protocol.py  tabby_api_protocol.py  worker_protocol.py
langport/routers/gateway/: common.py  openai_compatible.py
langport/routers/server/: core_node.py  embedding_node.py  generation_node.py
langport/service/: controller.py  dummy_node.py  embedding_worker.py  fauxpilot_api.py  generation_worker.py  openai_api.py  test_node.py  worker.py
langport/service/gateway/: cluster_monitor.py  cluster_monitor_app.py  fauxpilot_api.py  graphite_feeder.py  huggingface_api.py  openai_api.py  tabby_api.py
langport/service/server/: chatgpt_generation_worker.py  core_node.py  dummy_node.py  dummy_worker.py  embedding_node.py  embedding_worker.py  generation_node.py  generation_worker.py  ggml_generation_worker.py  optimum_generation_worker.py
langport/tests/: test_conversation.py
langport/utils/: __init__.py  cache.py  cache_state.py  evaluation.py  http_pool.py  interval_timer.py  itertools.py
langport/workers/: embedding_worker.py  generation_worker.py  model_worker.py
playground/: chatgpt_qa_example.py
(+2 files in other folders)
