[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langport"
version = "0.3.8"
description = "A large language model serving platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate>=0.22.0", "fastapi", "httpx", "numpy", "pydantic<=1.10.13", "requests",
    "rich>=10.0.0", "sentencepiece", "datasets>=2.14.5",
    "shortuuid", "tokenizers>=0.14.1", "torch",
    "transformers>=4.34.0", "uvicorn", "wandb", "tenacity>=8.2.2",
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]
ggml = ["ctransformers"]
optimum = ["onnx", "onnxruntime", "optimum"]

[project.urls]
"Homepage" = "https://github.com/vtuber-plan/langport"
"Bug Tracker" = "https://github.com/vtuber-plan/langport/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
